// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav rendering renders expected elements 1`] = `
<Layer
  aria-hidden={false}
  as="nav"
  className="SideNav"
>
  passSideNavActive
</Layer>
`;

exports[`SideNav rendering renders expected elements when className is set 1`] = `
<Layer
  aria-hidden={true}
  as="nav"
  className="SideNav TestClass"
>
  passSideNavActive
</Layer>
`;
